# svetle_ebook

./: bun.lockb  package.json  uno.config.ts
src/: app.html  hooks.server.js
src-tauri/: Cargo.toml  t.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: book_table.rs  cover.rs  ebook.rs  lib.rs  main.rs  out.js  store.rs  types.rs  util.rs
src-tauri/util/: env.rs  path.rs
src/comps/: Gallery.svelte  Viewer.svelte
src/lib/: Elegua.ts  book_gallery.js  file_picker.js  index.html  main.js  out2.js  surreal.js  ui.js  util.js
src/routes/: +page.svelte
