[package]
name = "svelte_ebook"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "svelte_ebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.93"
lazy_static = "1.5.0"
chained = "0.1.1"
pipe-trait = "0.4.0"
walkdir = "2.5.0"
either = { version = "1.13.0", features = ["serde"] }
quick-xml = { version = "0.37.0", features = ["serde", "tokio"] }
tokio = "1.41.1"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2"
tauri-plugin-localhost = "2"
zip = "2.2.0"

